Optimize the logic for refresh and initial launch